# multimodal-rag-assistant

./: .gitignore  README.md
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py
backend/app/ingestion/: __init__.py
backend/app/llm/: __init__.py
backend/app/retrieval/: __init__.py
backend/app/schemas/: __init__.py
backend/app/services/: __init__.py
backend/app/storage/: __init__.py
backend/app/vectorstore/: __init__.py
docs/: ARCHITECTURE.md
infra/: docker-compose.yml
